경로 상대경로로 수정

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <div class="swiper-pagination slidebar"></div>
                     </div>
                 </div>
-                <img class="img-boy" src="/images/common/icon_main_boy.webp" alt="메인 배너 남자아이 이미지">
+                <img class="img-boy" src="./images/common/icon_main_boy.webp" alt="메인 배너 남자아이 이미지">
             </section>
 
             <section class="inner-wrap contents">
@@ -349,7 +349,7 @@
                             <span class="txt">
                                 남서울대학교 <span style="letter-spacing:0;">RISE</span> 사업
                             </span>
-                            <span class="badge">사업소개 바로가기 <img src="/images/common/icon_arrow_right.svg" alt="바로가기 아이콘 이미지"></span>
+                            <span class="badge">사업소개 바로가기 <img src="./images/common/icon_arrow_right.svg" alt="바로가기 아이콘 이미지"></span>
                         </a>
                     </div>
                 </div>
