webp 이미지 수정변경 및 main 수정작업

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
         </header>
         <main class="content-wrap main" id="content">
             <section class="inner-wrap main-bn">
+                <div class="bg bg1"></div>
+                <div class="bg bg2"></div>
+                <div class="bg bg3"></div>
                 <h2 class="h2-title">
                     배우고, 일하고,<br>
                     다시 배우는 지역 혁신 생태계
