--- a/04_뉴스자료실_02_교육자료_01_리스트.html
+++ b/04_뉴스자료실_02_교육자료_01_리스트.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/content.css">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
     <script src="./js/jquery-3.2.1.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
 </head>
@@ -171,7 +170,7 @@
                 <div class="inner">
                     <ul class="bbs-gen-list">
                         <li>
-                            <a href="./PC_04_뉴스자료실_02_교육자료_02_상세.html">
+                            <a href="./04_뉴스자료실_02_교육자료_02_상세.html">
                                 <div class="txt-grp">
                                     <strong class="tit">click!! click시 상세페이지로 이동!!</strong>
                                     <span class="date">2025-07-11</span>
