--- a/04_뉴스자료실_03_카드뉴스_01_리스트.html
+++ b/04_뉴스자료실_03_카드뉴스_01_리스트.html
@@ -160,40 +160,123 @@
                         <a href="#">뉴스·보도자료</a>
                     </li>
                     <li>
-                        <a href="./index.html">보도자료</a>
+                        <a href="./index.html">카드뉴스</a>
                     </li>
                 </ol>
             </div>
-            <section class="inner-wrap news">
-                <h2 class="h2-title">보도자료</h2>
+            <section class="inner-wrap card">
+                <h2 class="h2-title">카드뉴스</h2>
 
                 <div class="inner">
-                    <div class="bbs-view">
-                        <div class="tit-grp">
-                            <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
-                            <div class="date-grp">
-                                <span class="date">2025-07-11</span>
-                            </div>
-                        </div>
-                        <div class="txt-grp">
-                            <div class="contents">
-                                <img src="./images/common/img_news_view_sample.png" alt="상세 이미지 샘플">
-                                <p>
-                                    지역과 대학의 동반성장을 목표로 하는 지역혁신 중심 대학지원체계(이하 라이즈) 사업이 올해부터 본격추진 된다. 이 사업은 교육부가 주관하는 국가 사업이다. 대학과 지역 산업이 협력해 혁신을 이끌고 지역 내 일자리와 인재를 양성해 지역의 미래를 설계한다. 충남도는 올해부터 라이즈사업에 시동을 걸었다. 1천403억원을 투입해 대학이 보유한 특화 분야, 전문성 등을 고려한 맞춤형 대학 선정으로 지역혁신과 동반성장의 선순환 체계 구축을 위한 충남도의 라이즈사업에 대해 알아본다. / 편집자
-                                    <br><br>
-                                    충남도가 지역-대학의 지속가능한 발전과 ‘지역 인재 양성-취창업-정주’ 생태계 구축을 위한 라이즈사업에 시동을 걸었다.
-                                    <br><br>
-                                    라이즈는 지자체가 교육부의 대학 지원 행·재정적 권한을 위임·이양받아 지역 발전과 연계한 전략적인 지원을 통해 지역-대학이 동반 성장하는 것을 목표로 하고 있다. 도는 이를 통해 지역과 대학이 함께 성장하는 지속가능한 상생 모델을 제시하겠다는 구상이다.
-                                    <br><br>
-                                    충남도는 올해 라이즈사업에 1천403억원을 투입한다. 도는 충남 라이즈 기본계획을 기반으로 사업 수행 대학을 공모, 선정평가위원회와 충남라이즈위원회를 거쳐 도내 22개 대학을 선정했다.
-                                    <br><br>
-                                    선정된 도내 22개 대학은 4대 프로젝트 17개 과제에서 134개 사업을 펼친다.
-                                </p>
-                            </div>
-                        </div>
+                    <ul class="bbs-gen-list">
+                        <li>
+                            <a href="./04_뉴스자료실_03_카드뉴스_02_상세.html">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb01.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">click!! click시 상세페이지로 이동!!</strong>
+                                    <span class="date">2025-07-11</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb02.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb03.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb04.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb01.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb03.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb04.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <div class="img-grp"><img src="./images/common/img_card_thumb05.png" alt="카드뉴스 이미지"></div>
+                                <div class="txt-grp">
+                                    <strong class="tit">지역·대학 동반성장 충남 ‘라이즈사업’ 닻 올라</strong>
+                                    <span class="date">2025-07-13</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    
+                    <div class="search-area">
+                        <select name="select2-1" id="select2-1" class="ipt" title="제목">
+                            <option value="0">제목</option>
+                            <option value="1">내용</option>
+                            <option value="2">제목+내용</option>
+                        </select>
+                        <input type="text" class="ipt search-ipt" title="검색어 입력" placeholder="검색어를 입력해주세요.">
+                        <button type="button" class="btn btn-cmn"><i class="ico icon-search"></i>검색</button>
                     </div>
-                    <div class="btn-area">
-                        <a href="./04_뉴스자료실_01_보도자료_01_리스트.html" class="btn btn-cmn">목록</a>
+                    
+                    <div class="page-list">
+                        <button type="button" class="btn-paging prev2 pc-only">처음으로</button>
+                        <button type="button" class="btn-paging prev2 mo-only" aria-hidden="true">처음으로</button>
+                        <button type="button" class="btn-paging prev pc-only">이전</button>
+                        <button type="button" class="btn-paging prev mo-only" aria-hidden="true">이전</button>
+                        <ol class="num-list pc-only">
+                            <li class="on"><button type="button">1</button></li>
+                            <li><button type="button">2</button></li>
+                            <li><button type="button">3</button></li>
+                            <li><button type="button">4</button></li>
+                            <li><button type="button">5</button></li>
+                            <li><button type="button">6</button></li>
+                            <li><button type="button">7</button></li>
+                            <li><button type="button">8</button></li>
+                            <li><button type="button">9</button></li>
+                            <li><button type="button">10</button></li>
+                        </ol>
+                        <div class="count-grp mo-only">
+                            <span class="current-count">1</span>/<span class="max-count">100</span>
+                        </div>
+                        <button type="button" class="btn-paging next pc-only">다음</button>
+                        <button type="button" class="btn-paging next mo-only" aria-hidden="true">다음</button>
+                        <button type="button" class="btn-paging next2 pc-only">마지막으로</button>
+                        <button type="button" class="btn-paging next2 mo-only" aria-hidden="true">마지막으로</button>
                     </div>
                 </div>
 
