안전관리교육 1~3 tab pc기준 작업

--- a/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
+++ b/02_교육프로그램_01_AI산업안전관리교육_02_교육프로그램소개_01.html
@@ -175,7 +175,63 @@
                         </ul>
                         <div class="tab-content-wrap">
                             <div class="tab-content" id="tab1-con1">
-                                11111
+                                <p class="info-txt">
+                                    AI Vision 기술을 도입하여 국내의 높은 산업재해율을 극복하는 혁신 교육을 제공하여<br>
+                                    충남 지역의 산업안전관리 역량을 강화하고, 중대재해처벌법 대응에 필수적인<br>
+                                    AI 기반 지식을 안전 의사결정권자에게 제공
+                                </p>
+                                <div class="inner">
+                                    <h3 class="h3-title"><i class="ico icon-h3"></i>핵심목표</h3>
+                                    <div class="wh-box">
+                                        <p class="bullet">AI 기술 활용 지식을 통한 산업 안전 관리 역량 강화</p>
+                                        <p class="bullet">
+                                            중대재해처벌법에 효과적으로 대응할 수 있는 지식 증진<br>
+                                            <span class="fwb txt-sec">→  산업안전 담당자와 경영진 등 안전 의사결정권자의 AI 기반 관리 지식 및 역량을 획기적으로 증진</span>
+                                        </p>
+                                    </div>
+                                </div>
+
+                                <div class="inner">
+                                    <h3 class="h3-title"><i class="ico icon-h3"></i>교육수행체계</h3>
+                                    <ul class="round-box">
+                                        <li>
+                                            <p class="tit-grp">
+                                                <span class="txt-sec">Track 1</span>
+                                                <b>현장을 찾아가는 학습 서비스</b>
+                                                (On-Site Customization)
+                                            </p>
+
+                                            <div class="txt-grp fwb">
+                                                <dl>
+                                                    <dt>대상</dt>
+                                                    <dd class="fwb">중견/대기업, 맞춤형 현장 교육 필요 기업</dd>
+                                                    <dt>장점</dt>
+                                                    <dd>학습 내용의 현장 즉각 적용 및 이해도 향상</dd>
+                                                    <dt>대상</dt>
+                                                    <dd>협력전문기관과 협력하여 기업 현장 방문 교육 수행</dd>
+                                                </dl>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <p class="tit-grp">
+                                                <span class="txt-sec">Track 2</span>
+                                                <b>“AI 혁신교육 허브” 실습장에서의 학습</b>
+                                                (Centralized Efficiency)
+                                            </p>
+
+                                            <div class="txt-grp">
+                                                <dl>
+                                                    <dt>대상</dt>
+                                                    <dd class="fwb">중소기업, IT 인프라 미비 그룹</dd>
+                                                    <dt>장점</dt>
+                                                    <dd>고가 교육용 AI 시스템의 공동 활용 및 비용 효율성 확보</dd>
+                                                    <dt>대상</dt>
+                                                    <dd>협력전문기관과의 협력을 통한 실습장에서의 교육 수행</dd>
+                                                </dl>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="tab-content is-active" id="tab1-con2">
                                 <p class="info-txt">
@@ -306,7 +362,56 @@
                                 </div>
                             </div>
                             <div class="tab-content" id="tab1-con3">
-                                6
+                                <p class="info-txt">
+                                    산업 현장에서 이용하는 최신 AI 안전 솔루션을 실습하고,<br>
+                                    실제 현장에서 자주 발생하는 비상상황에 대한 사례를 체험합니다.
+                                </p>
+                                <div class="img-frame practice">
+                                    <img src="./images/common/img_sample_practice.webp" alt="비상상황 샘플 이미지">
+                                </div>
+                                
+                                <div class="inner">
+                                    <h3 class="h3-title"><i class="ico icon-h3"></i>비상상황 체험 예시</h3>
+                                    <ul class="box-list emergency">
+                                        <li>
+                                            <img src="./images/common/icon_emergency01.svg" alt="비상상황 체험 예시1">
+                                            <span class="txt">
+                                                안전모<br>미착용 시
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <img src="./images/common/icon_emergency02.svg" alt="비상상황 체험 예시2">
+                                            <span class="txt">
+                                                작업자<br>추락위험 감시
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <img src="./images/common/icon_emergency03.svg" alt="비상상황 체험 예시3">
+                                            <span class="txt">
+                                                작업자<br>출입카운트 감시
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <img src="./images/common/icon_emergency04.svg" alt="비상상황 체험 예시4">                                            <span class="txt">
+                                                화재나<br>연기 발생시
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <img src="./images/common/icon_emergency05.svg" alt="비상상황 체험 예시5">
+                                            <span class="txt">
+                                                작업자<br>쓰러짐 발생시
+                                            </span>
+                                        </li>
+                                        <li>
+                                            <img src="./images/common/icon_emergency06.svg" alt="비상상황 체험 예시6">
+                                            <span class="txt">
+                                                작업장 위험구역<br>진입 감시
+                                            </span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+
                             </div>
                         </div>
                     </div>
